--- a/neighbour/templates/all-neighbour/home.html
+++ b/neighbour/templates/all-neighbour/home.html
@@ -5,11 +5,12 @@
 {% block content%}
 {{block.super}}
 <div class="container-fluid background text-center">
-    <h1 class="font-weight-bold text-center text-dark intro">THE POWER OF COMMUNITY</h1>
-    <h1 class="nei">Rhood</h1>
-    <h6 class="intro1">Alone, we can do so little; together we can do so much <br>
+    <!-- <h1 class="font-weight-bold text-center text-dark intro">THE POWER OF COMMUNITY</h1> -->
+    <h1 class="font-weight-bold text-center text-dark pt-5 ">The Community <span class="auto-type text-danger"></span></h1>
+    <h1 class="nei">Neighood</h1>
+    <h3 class="intro1 fs-5 font-weight-bold">Alone, we can do so little; together we can do so much <br>
          Hellen Keller
-    </h6>
+    </h3>
     {% if request.user.profile.neighbourhood %}
     {%else%}
     <a href="{%url 'hoods'%}" class="btn mt-4 btn-warning pl-4 pr-4 font-weight-bold black">Free Community Sign Up</a>
@@ -20,12 +21,12 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-4">
-            <h1 class="font-weight-bold hoodapp">Rhood provides a community where people interact. The platform provides a safe environment where hood people can share, get information, and ask questions.</h1>
+            <p class="font-weight-bold hoodapp">Neighood provides a community where people interact. The platform provides a safe environment where hood people can share, get information, and ask questions.</p>
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-5">
             <p class="community">
-                With Community Comes Unity. Rhood is a community established for communities by communities.
+                With Community Comes Unity. <br> Neighood is a community established for communities by communities.
             </p>
         </div>
         <div class="col-md-1"></div>
