--- a/neighbour/templates/navbar.html
+++ b/neighbour/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <a class="navbar-brand neig text-center" href="{% url 'home' %}">R-Hood </a>
+<nav class="navbar navbar-expand navbar-dark bg-success p-1">
+    <a class="navbar-brand text-center fs-2" href="{% url 'home' %}"><h3>Neighbour<span class="text-danger">Hood</span></h3> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,7 +41,6 @@
               <img src="{{user.profile.profile_pic.url}}"  alt= "" class="rounded-circle user profile-img"></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a href="{%url 'profile' user.username%}" class="nav-link text-dark dropdown-item"><i class="fas fa-user"></i> Profile</a>
-              <!-- <a href="/accounts/password/change" class="nav-link text-dark dropdown-item"><i class="fas fa-cog"></i> Settings</a> -->
               <a href="/logout" class="nav-link text-dark dropdown-item">Logout <i class="fas fa-sign-out-alt"></i></a>
               
             </div>
