--- a/neighbour/static/css/style.css
+++ b/neighbour/static/css/style.css
@@ -22,6 +22,9 @@ body{
     font-family: 'lato', sans-serif;
     overflow-x:hidden !important;
 }
+.navbar{
+    color: black;
+}
 
 .nav-link:hover{
     font-weight: bold !important;
